Named Entity Recognition on Movies with Spacy and TensorFlow

--- a/nlp_named_entity_recognition/NER_on_Movies_with_Spacy_and_TensorFlow.ipynb
+++ b/nlp_named_entity_recognition/NER_on_Movies_with_Spacy_and_TensorFlow.ipynb
@@ -1155,24 +1155,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/opt/conda/lib/python3.7/importlib/_bootstrap.py:219: RuntimeWarning: numpy.ufunc size changed, may indicate binary incompatibility. Expected 216, got 192\n",
-      "  return f(*args, **kwds)\n",
-      "/opt/conda/lib/python3.7/importlib/_bootstrap.py:219: ImportWarning: can't resolve package from __spec__ or __package__, falling back on __name__ and __path__\n",
-      "  return f(*args, **kwds)\n",
-      "/opt/conda/lib/python3.7/importlib/_bootstrap.py:219: RuntimeWarning: numpy.ufunc size changed, may indicate binary incompatibility. Expected 192 from C header, got 216 from PyObject\n",
-      "  return f(*args, **kwds)\n",
-      "/opt/conda/lib/python3.7/importlib/_bootstrap.py:219: RuntimeWarning: numpy.ufunc size changed, may indicate binary incompatibility. Expected 192 from C header, got 216 from PyObject\n",
-      "  return f(*args, **kwds)\n",
-      "Using TensorFlow backend.\n",
-      "/opt/conda/lib/python3.7/site-packages/keras/callbacks/callbacks.py:19: DeprecationWarning: Using or importing the ABCs from 'collections' instead of from 'collections.abc' is deprecated since Python 3.3,and in 3.9 it will stop working\n",
-      "  from collections import Iterable\n"
+      "Using TensorFlow backend.\n"
      ]
     }
    ],
